# lisp-rs

./: Cargo.toml  LICENSE.md  README.md
benches/: fib_bench.rs
examples/: fibonacci.l
src/: main.rs
src/grammar/: cell.rs  lisp.pest  mod.rs  parser.rs  util.rs
src/lisprs/: cell.rs  error.rs  evaluator.rs  frame.rs  iter.rs  lisp.pest  lisp_env.rs  list.rs  mod.rs  parser.rs  symbol.rs  util.rs
src/lisprs/core/: add.rs  car.rs  cdr.rs  def.rs  eq.rs  if.rs  lt_equal.rs  mod.rs  mult.rs  not.rs  put.rs  quote.rs  structural_eq.rs  sub.rs  symbols.rs
stdlib/: cell_accessors.l  structural_inequality.l
