[package]
name = "lisp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
err-derive = "0.3"
filesystem = "0.4"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
rust-embed = { version = "6.4", features = [ "debug-embed"] }
slab = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fib_bench"
harness = false